# GEOSradiation_GridComp

./: CMakeLists.txt  GEOS_RadiationGridComp.F90  README.md
.circleci/: config.yml
.github/: CODEOWNERS
ESMF/: CMakeLists.txt
ESMF/GEOS_RadiationGridComp/: CMakeLists.txt
ESMF/GEOS_RadiationGridComp/Shared/: CMakeLists.txt
GEOS_RadiationShared/: CMakeLists.txt  rad_types.F90  rad_utils.F90
GEOS_RadiationShared/NRLSSI2/: Mg_SB_from_daily_file.py  README.md  TSI_Mg_SB_merged_from_daily.py  TSI_from_daily_files.py
GEOS_RadiationShared/RRTMGP_cmake/: CMakeLists.txt
GEOSirrad_GridComp/: GEOS_IrradGridComp.F90  irrad.F90  irradconstants.F90
GEOSsatsim_GridComp/: GEOS_SatsimGridComp.F90
GEOSsolar_GridComp/: CMakeLists.txt  GEOS_SolarGridComp.F90  sorad.F90  soradconstants.F90
GEOSsolar_GridComp/RRTMG/rrtmg_sw/gcm_model/modules/: rrsw_wvn.F90
GEOSsolar_GridComp/RRTMG/rrtmg_sw/gcm_model/src/: CMakeLists.txt  rrtmg_sw_cldprmc.F90  rrtmg_sw_init.F90  rrtmg_sw_rad.F90  rrtmg_sw_setcoef.F90  rrtmg_sw_spcvmc.F90
